tests/cases/compiler/jsxMissingGt/index.tsx
export default () => <div/ //~ ERROR: Expected '>'.